--- a/src/components/Cards/CardItem.css
+++ b/src/components/Cards/CardItem.css
@@ -8,3 +8,11 @@
     width: 100%;
     
 }
+.count-Item{
+    display: flex;
+    margin: 5px;
+    width: 100%;
+    justify-content: center;
+    border-top: solid 1px gray;
+    border-bottom: solid 1px gray;
+}
