--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 
 .banner{
     background-color: white;
+    height: 80px;
 }
 .container-logo {
     width: 100px;
@@ -21,4 +22,21 @@
     display: flex;
     flex-direction: row;
     margin: 20px;
+}
+.links{
+    color: black;
+    text-decoration: none;
+}
+
+.detailBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 80%;
+    height: 300px;
+    margin-top: 30px;
+}
+
+.detailBox img{
+    width: 100%;
 }
