Generando Ordenes de Compra

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -36,3 +36,28 @@
     margin-top: 50px;
     border-top: 2px solid black;
 }
+form.form-contact {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    
+  }
+  
+  form.form-contact > div {
+    margin-bottom: 15px;
+    
+  }
+  
+  form.form-contact button {
+    margin: 10px;
+    background: black;
+      border-radius: 40px;
+      text-transform: none;
+      color: white;
+      font-family: 'Lato';
+      padding: 10px 20px;
+      font-size: 14px;cursor: pointer;}
+
+      form.form-contact input {
+        margin: 15px;
+      }
