--- a/src/components/Cart/CartWidget.css
+++ b/src/components/Cart/CartWidget.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin: 10px;
     border-bottom: 0.5px solid gray;
 }
