--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -40,3 +40,15 @@
 .detailBox img{
     width: 100%;
 }
+.countBox{
+    display: flex;
+    flex-direction: column;
+}
+.loading{ 
+    width: 100%;
+    height: 500 px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
