--- a/src/components/Cards/CardItem.css
+++ b/src/components/Cards/CardItem.css
@@ -29,11 +29,13 @@
     color: white;
     text-decoration: none;
 }
-.buttonBox{
+.buttonBox {
     height: 100px;
     display: flex;
     flex-direction: column;
     margin: 10px;
     justify-content: space-around;
 }
-
+.buttonBox button{
+    width: 100%;
+}
